# go-suffixarray

./: .travis.yml  BUILD.bazel  LICENSE  README.md  WORKSPACE  buckets.go  debug.go  doc.go  go.mod  go.sum  lcparray.go  lcparray_test.go  options.go  sais.go  sais_test.go  search.go  search_test.go  shared_test.go  suffixarray.go  text.go  typemap.go  util.go
